--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
